Remove multiple IDs for 1020, add some colours, work on pipeline.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -49,16 +49,16 @@ By the end of this unit, students should be able to:
 
 1. Write and run a program in a *new* programming language (Java), transferring
    skills learned in previous courses (Python or Processing).
-   :program#first-year-review:
+   :program#first-year-review: [^intro-length]
    
-**Note**: In the current curriculum, this unit is 2 weeks long.
+[^intro-length]: In the current curriculum, this unit is 2 weeks long.
 
 OOP Basics 1
 ------------
 
 By the end of this unit, students should be able to:
 
-1. Define the term "Object-oriented programming". :oo#overview-of-oo:
+1. Define the term "Object-oriented programming". :oo:
    :communicate#explain-basic-oo-concepts:
     1. List the properties of a class.
     2. Explain what the `this` keyword represents in an instance method of a
@@ -68,10 +68,10 @@ By the end of this unit, students should be able to:
     5. Explain how access modifiers (e.g., `public` and `private`) enable you to
        apply the principle of encapsulation.
 2. Decide if an instance method or instance variable can be invoked or used in a
-   specific scope given its access modifier. :oo#method-overloading:
+   specific scope given its access modifier. :oo:
    :evaluate#evaluate-method-overloading:
-3. Declare, initialize, and use instances of a *user-defined* class.
-   :oo#apply-basic-oo-concepts: :program#create-and-use-a-class:
+3. Declare, initialize, and use instances of a *user-defined* class. :oo:
+   :program#create-and-use-a-class:
     1. Write a "default constructor" for a class.
     2. Write and call instance methods for a class (e.g., `toString`,
        `compareTo`).
@@ -86,12 +86,12 @@ OOP Basics 2
 
 By the end of this unit, students should be able to:
 
-1. Write a method to copy an instance of an object. :oo#copy-constructor:
+1. Write a method to copy an instance of an object. :oo:
    :program#write-a-copy-constructor:
     1. Decide when to use a shallow copy vs a deep copy.
 2. Compare and contrast a "shallow copy" (i.e., use of assignment operator on a
    reference) vs "deep copy" (i.e., use of copy constructors or methods to copy
-   object data). :oo#pointers-vs-primitives:
+   object data). 
    :communicate#explain-differences-between-pointers-and-primitives:
     1. Given a piece of code, draw a diagram that shows the state of references
        and copies as the code executes (passing-by-value vs
@@ -100,16 +100,16 @@ By the end of this unit, students should be able to:
    Java (i.e., garbage collection).
    :communicate#basic-explain-garbage-collection:
 4. Compose a class from several other classes by declaring instance variables
-   using other user-defined types (e.g., a `Person` has an `Address`).
-   :design#compose-objects-with-objects: :program#write-composite-classes:
+   using other user-defined types (e.g., a `Person` has an `Address`). :program:
+   :design#composite-objects: :oo:
 5. Declare a class that refers to itself with instance variables (e.g., a
    `Person` has other `Person` attributes, like parents).
-   :oo#self-referencing-classes: :program#write-self-referencing-classes:
+   :oo: :program#write-self-referencing-classes:
 6. Write and use a "list" class to represent a collection of values.
-   :data-structures#lists-for-collections: :program#write-a-list-class:
+   :data-structures#lists-for-collections: :program:
 7. Explain how using a "list" class can be better than using an array to
-   represent collections of values. :data-structures#properties-of-lists:
-   :communicate#list-differences-between-list-and-array:
+   represent collections of values. :data-structures:
+   :communicate#ifferences-between-list-and-array:
    
 Multi-dimensional arrays
 ------------------------
@@ -117,20 +117,20 @@ Multi-dimensional arrays
 By the end of this unit, students should be able to:
 
 1. Declare, initialize, and use multi-dimensional arrays in a Java program.
-   :data-structures#multidimensional-data:
-   :program#create-and-use-multidimensional-arrays:
+   :data-structures: :program#create-and-use-multidimensional-arrays:
     1. Declare, initialize, and use "ragged" arrays in a Java program (i.e.,
        multi-dimensional arrays with non-uniform length in the 2^nd^+
        dimension).
     2. Write a class that has a multi-dimensional array as an instance variable.
 2. Given a piece of code, draw a diagram representing the state of references in
-   a multi-dimensional array.
-   :data-structures#multidimensional-arrays-with-references:
+   a multi-dimensional array. :data-structures:
    :communicate#describe-mental-model-of-data:
 3. Create "useful" instance methods for a class. [^useful-methods]
-   :design#identify-common-operations: :program#write-instance-methods:
-4. Write a simple, manual testing method for a class, in a separate file.
-   :testing#automated-testing: :program#multi-file-compilation:
+   :design#identify-common-operations: 
+4. Separate code into multiple files, then recompile into a single program.
+   :program#multi-file-compilation:
+5. Write a simple, manual testing method for a class, in a separate file.
+   :testing#automated-testing:
 
 [^useful-methods]: In the context of this course, a "useful" instance method is
 one that provides matrix operations on a class that contains a multi-dimensional
@@ -143,24 +143,24 @@ File I/O and exceptions
 
 By the end of this unit, students should be able to:
 
-1. Create and use/`throw`/`catch` an `Exception` in a program.
-   :exceptions#indicating-exceptional-behaviour:
+1. Create and use/`throw`/`catch` an `Exception` in a program.  :exceptions:
    :program#create-and-use-exceptions:
     1. Use built-in Java `Exception` types.
     2. Create user-defined `Exception` types.
-2. Handle exceptions thrown (`try`/`catch`) by library code (specifically: I/O).
-   :exceptions#handling-exceptional-behaviour: :files#read-from-a-file:
+2. Write code to read plain text from a file. :files#read-from-a-file:
+3. Handle exceptions thrown (`try`/`catch`) by library code (specifically: I/O).
    :program#write-code-to-read-files-handle-exceptions:
     1. Decide if an `Exception` should be handled in a `try`/`catch` block, or
        should be `throw`n by marking a method with `throws`.
+       :exceptions#handling-exceptional-behaviour:
     2. Handle *specific* `Exception`s thrown by an operation.
-3. List the order of operations in a `try`/`catch`/`finally` block, given a
-   piece of code. :exceptions#finally-block: :evaluate#list-order-of-exception-handling-code:
-4. Read and write text files in a program. :files#files-as-objects:
+4. Use a `finally` block in exception handling code. :exceptions#finally-block:
+5. List the order of operations in a `try`/`catch`/`finally` block, given a
+   piece of code. :evaluate#list-order-of-exception-handling-code:
+6. Read and write text files in a program.
    :program#read-and-write-files:
-5. Parse the contents of a file by tokenizing strings in a program (e.g.,
+7. Parse the contents of a file by tokenizing strings in a program (e.g.,
    `String#split` or `Scanner`). :files#tokenizing-strings:
-   :program#write-code-to-tokenize-strings:
     1. Create an instance of a class based on the data that's contained within a
        file.
    
@@ -170,7 +170,7 @@ OOP Polymorphism 1
 
 By the end of this unit, students should be able to:
 
-1. Create and use a subclass in a Java program. :oo#class-hierarchies:
+1. Create and use a subclass in a Java program. :oo:
    :program#create-and-use-subclasses:
     1. Write one or more non-default constructors in a class hierarchy.
     2. Call the constructor or method in the parent class with the `super`
@@ -180,16 +180,15 @@ By the end of this unit, students should be able to:
        and subclass.
 2. Given a class and subclass that have properties or behaviour with the same
    name (instance variables or method signatures), determine which property is
-   being referred to in a specific scope. :oo#scoping-and-class-hierarchies:
+   being referred to in a specific scope. :oo:
    :evaluate#decide-which-property-is-referred-to-in-scope:
 3. Use implicit and explicit typecasting to broaden or narrow the type of a
-   value. :oo#casting-rules-for-classes: :program#upcast-and-downcast-instances:
+   value. :oo: :program#upcast-and-downcast-instances:
     1. Safely cast between types using the `instanceof` operator.
-4. Define the term "polymorphism". :oo#polymorphism-and-oo:
-   :communicate#define-polymorphism:
+4. Define the term "polymorphism". :oo: :communicate#define-polymorphism:
     1. Explain how polymorphism is related to `abstract` classes in Java.
 5. Write code that implements the concept of polymorphism in Java.
-   :oo#apply-polymorphism: :program#write-polymorphic-abstract-class:
+   :oo: :program#write-polymorphic-abstract-class:
     1. Write an `abstract` class in a Java program.
 
 OOP Polymorphism 2 
@@ -198,12 +197,11 @@ OOP Polymorphism 2
 By the end of this unit, students should be able to:
 
 1. Decompose a real-world domain into a model represented as a hierarchy of
-   related classes. :oo#real-world-hierarchies:
-   :design#design-a-hierarchy-before-use:
+   related classes. :oo: :design#design-a-hierarchy-before-use:
     1. Decide which class in a hierarchy of classes should have a property or
        behaviour.
-2. Draw a diagram representing related classes in a hierarchy.
-   :oo#hierarchies-as-tree: :communicate#describe-mental-model-of-hierarchy:
+2. Draw a diagram representing related classes in a hierarchy.  :oo:
+   :communicate#describe-mental-model-of-hierarchy:
 
 Strings[^strings], ArrayLists
 -------------------
@@ -211,14 +209,13 @@ Strings[^strings], ArrayLists
 By the end of this unit, students should be able to:
 
 1. Create and use instances of the Java-specific `ArrayList` class.
-   :data-structures#array-as-list-data-structure:
-   :program#use-language-library-data-structures:
+   :data-structures#array-as-list-data-structure: :program:
     1. Use the "generics" feature in Java to hint about the type stored in the
        collection.
     2. Use Java-specific wrapper classes for primitive types (i.e., `int` cannot
        be stored in a generic `ArrayList`, but `Integer` can).
 2. Compare and contrast arrays and `ArrayList` (or, more generally, the `List`
-   interface). :data-structures#data-structure-comparisons:
+   interface). :data-structures:
    :communicate#explain-differences-between-data-structures:
    
 [^strings]: The only learning objective related to `String`s in this unit is to be
@@ -231,11 +228,9 @@ By the end of this unit, students should be able to:
 
 1. Compare and contrast lists and arrays (e.g., insertion/deletion time, access
    time, contiguous memory allocation, size restrictions, etc).
-   :data-structures#properties-of-data-structures:
-   :communicate#compare-data-structures:
+   :data-structures: :communicate#compare-data-structures:
 2. Create and use a linked list data structure in a program.
-   :data-structures#linked-list-data-structure:
-   :program#create-and-use-linked-list-class:
+   :data-structures: :program#create-and-use-linked-list-class:
     1. Write a method to add a node to the top of a linked list.
     2. Write a method to iterate over the nodes in a linked list.
     3. Write a method to insert a node in an arbitrary position in a linked
@@ -244,8 +239,7 @@ By the end of this unit, students should be able to:
        or index.
     5. Write a method to do an ordered insertion of a node into a linked list.
 3. Given a description of some data, decide which of a list or an array is the
-   best choice for data structure.
-   :data-structures#flexibility-of-data-structures:
+   best choice for data structure.  :data-structures:
    :design#choose-a-reasonable-data-structure:
 
 Recursion
@@ -254,20 +248,18 @@ Recursion
 By the end of this unit, students should be able to:
 
 1. Write a recursive program that implements a recursive algorithm (e.g.,
-   factorial, Fibonacci), given the algorithm.
-   :recursion#recurrence-relations-to-programs:
+   factorial, Fibonacci), given the algorithm.  :recursion:
    :program#write-recursive-code-given-algorithm:
 2. Draw a diagram representing the state of a stack of method calls in a
-   recursive function. :recursion#recursion-as-a-stack:
-   :communicate#describe-mental-model-of-recursion:
+   recursive function. :recursion:
+   :communicate#describe-mental-model-of-recursion-as-stack:
 3. Create and implement recursive solution to a simple problem (e.g.,
    permutations of a sequence, all subsets of a sequence).
    :recursion#derive-recursion-from-problem:
-   :design#design-recursive-solution-to-problem:
-   :program#implement-recursion-with-helpers:
     1. Write a recursive solution to a problem with a "helper" function.
+       :program#implement-recursion-with-helpers:
 4. Give an example of when recursion is not an appropriate solution to a
-   problem, and explain why. :recursion#recursion-isn't-perfect:
+   problem, and explain why. :recursion:
    :communicate#explain-limitations-of-recursion:
    
 Searching[^searching] and sorting
@@ -276,37 +268,32 @@ Searching[^searching] and sorting
 By the end of this unit, students should be able to:
 
 1. Give examples of search algorithms for sequences of data.
-   :algorithms#searching-algorithms: :communicate#list-searching-algorithms:
+   :algorithms: :communicate#list-searching-algorithms:
 2. Compare and contrast linear search and binary search.
-   :algorithms#complexity-and-data-requirements:
    :communicate#compare-searching-algorithms:
     1. List the data requirements for binary search to be applied (e.g.,
        ordered, contiguous memory).
+       :algorithms#complexity-and-data-requirements:
     2. List the runtime requirements of binary search and linear search, in
        big-O notation.
 3. Given some data, decide if linear search or binary search should be applied.
-   :algorithms#data-guides-algorithm-choice:
-   :design#choose-an-algorithm-based-on-data:
+   :algorithms#dchoose-an-algorithm-based-on-data:
 4. Write a program that implements linear search and binary search on an array.
-   :algorithms#apply-searching-algorithms-to-arrays:
-   :program#write-binary-and-linear-search:
+   :algorithms: :program#write-binary-and-linear-search:
 5. Write a program that implements binary search *recursively* on an array.
-   :algorithms#convert-algorithms-sequential-to-recursive:
-   :recursion#derive-recursive-solution-to-linear-algorithm:
    :program#write-recursive-search-functions:
 6. Describe sorting algorithms (e.g., insertion sort, selection sort, recursive
-   merge sort, quick sort) in plain English. :algorithms#sorting-algorithms:
+   merge sort, quick sort) in plain English. :algorithms:
    :communicate#describe-basic-sorting-algorithms:
 7. Compare and contrast sorting algorithms (e.g., insertion sort, selection
    sort, recursive merge sort, quick sort).
-   :algorithms#complexity-of-sorting-algorithms:
    :communicate#compare-sorting-algorithms:
-    1. List the runtime requirements of different sorting algorithms.
+    1. List the runtime requirements of different sorting algorithms. 
+       :algorithms#complexity-of-sorting-algorithms:
     2. Explain why choosing a poor pivot reduces the overall performance of the
        quick sort algorithm.
 8. Write a program to implement sorting algorithms (e.g., insertion sort,
-   selection sort, recursive merge sort, quick sort).
-   :algorithms#implementation-details-of-sorting-algorithms:
+   selection sort, recursive merge sort, quick sort).  :algorithms:
    :program#write-sorting-alrogithms:
 
 [^searching]: Both linear search and binary search are learning objectives that
