Starting on COMP 1000 objectives.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -34,7 +34,8 @@ By the end of this course, a student should be able to:
 4. Write code that can handle failures gracefully. :exceptions:
 5. Write software that deals with large sets of data using files stored on disk.
    :files:
-6. Apply searching and sorting algorithms to collections, compare efficiency. :algorithms:
+6. Apply searching and sorting algorithms to collections, compare efficiency.
+   :algorithms:
 7. Use and implement data structures to solve a problem. :data-structures:
 8. Formulate recursive solutions to problems, and write recursive methods.
    :recursion:
