Working on 1000 objectives, thinking about going forward.

--- a/reconsidered/COMP1000.md
+++ b/reconsidered/COMP1000.md
@@ -65,6 +65,21 @@ By the end of this unit, students should be able to:
 3. \nameref{comp1500-listing-number-systems}
 4. \nameref{comp1500-converting-between-number-systems}
 
+### Logic and Computing
+
+By the end of this unit, students should be able to:
+
+### Assembly language programming
+
+By the end of this unit, students should be able to:
+
+1. \nameref{comp1500-assembly-language}
+2. \nameref{comp1500-io}
+3. \nameref{comp1500-branching}
+4. \nameref{comp1500-repetition}
+
+### Algorithms
+
 Part 2
 ------
 
