Don't use LaTeX native \nameref, custom solution instead.

--- a/reconsidered/COMP1000.md
+++ b/reconsidered/COMP1000.md
@@ -60,10 +60,10 @@ Part 1
 
 By the end of this unit, students should be able to:
 
-1. \nameref{comp1500-real-world-translation}
-2. \nameref{comp1500-decomposing-problems}
-3. \nameref{comp1500-listing-number-systems}
-4. \nameref{comp1500-converting-between-number-systems}
+1. [*comp1500-real-world-translation] [=comp1500-decomposing-problems]
+2. [*comp1500-decomposing-problems]
+3. [*comp1500-listing-number-systems]
+4. [*comp1500-converting-between-number-systems]
 
 ### Logic and Computing
 
@@ -73,10 +73,10 @@ By the end of this unit, students should be able to:
 
 By the end of this unit, students should be able to:
 
-1. \nameref{comp1500-assembly-language}
-2. \nameref{comp1500-io}
-3. \nameref{comp1500-branching}
-4. \nameref{comp1500-repetition}
+1. [*comp1500-assembly-language]
+2. [*comp1500-io]
+3. [*comp1500-branching]
+4. [*comp1500-repetition]
 
 ### Algorithms
 
