First half of the course started.

--- a/reconsidered/COMP1000.md
+++ b/reconsidered/COMP1000.md
@@ -60,30 +60,87 @@ Part 1
 
 By the end of this unit, students should be able to:
 
-1. [*comp1500-real-world-translation] [=comp1500-decomposing-problems]
+1. [*comp1500-real-world-translation] 
 2. [*comp1500-decomposing-problems]
 3. [*comp1500-listing-number-systems]
 4. [*comp1500-converting-between-number-systems]
+5. [*comp1500-binary-as-on-and-off]
+6. [*comp1500-text-as-numbers]
+7. [*comp1500-explain-standards-requirement]
+8. [*comp1500-digital-images]
+9. [*comp1500-encode-an-image]
+10. [*comp1500-predict-animation]
 
-### Logic and Computing
+### Logic and Circuits
 
 By the end of this unit, students should be able to:
+
+1. [*comp1500-evaluate-logical-expressions]
+   [=comp1010-evaluate-boolean-expressions-logical-operators]
+2. [*comp1500-truth-tables]
+3. [*comp1500-expressions-as-circuits]
+4. [*comp1500-draw-adders]
+5. [*comp1500-evaluate-adders]
+6. [*comp1500-circuits-to-arithmetic]
+7. [*comp1500-predict-the-output-circuits]
+8. [*comp1500-conditional-circuits]
+
+### General purpose computing
+
+By the end of this unit, students should be able to:
+
+1. [*comp1500-alu-terms]
+2. [*comp1500-purpose-of-alu]
+3. [*comp1500-instructions-and-numbers]
+4. [*comp1500-physical-analogs-to-memory]
+5. [*comp1500-compare-primary-secondary-memory]
+6. [*comp1500-control-unit-purpose]
+7. [*comp1500-memory-addressing]
+8. [*comp1500-memory-to-registers]
 
 ### Assembly language programming
 
 By the end of this unit, students should be able to:
 
-1. [*comp1500-assembly-language]
-2. [*comp1500-io]
-3. [*comp1500-branching]
-4. [*comp1500-repetition]
+1. [*comp1500-assembly-language] [~comp1010-write-and-run]
+2. [*comp1500-io] [=comp1010-accept-use-input]
+3. [*comp1500-branching] [~comp1010-use-conditional-statements]
+4. [*comp1500-repetition] [~comp1010-use-basic-loops]
 
 ### Algorithms
+
+By the end of this unit, students should be able to:
+
+1. [*comp1500-define-algorithm]
+2. [*comp1500-divide-and-conquer] [~comp1010-apply-top-down-design]
+3. [*comp1500-apply-searching-algorithms] [~comp1010-linear-search]
+   [~comp1010-binary-search]
+4. [*comp1500-compare-linear-binary-search]
+   [=comp1010-measure-search-complexity] [=comp1010-use-complexity-to-compare]
+   [=comp1010-data-requirements-for-algorithms]
+
+### Programming in Scratch (or JavaScript)
+
+By the end of this unit, students should be able to:
+
+1. [*comp1500-write-program-given-solution]
+2. [*comp1500-compare-high-level-with-assembly]
+3. [*comp1500-visual-language-simple-sequence] [=comp1010-write-and-run]
+4. [*comp1500-variables] [=comp1010-declare-use-variables]
+5. [*comp1500-logical-expressions]
+   [~comp1010-evaluate-boolean-expressions-logical-operators]
+6. [*comp1500-conditional-statements] [=comp1010-use-conditional-statements]
+7. [*comp1500-looping] [=comp1010-use-basic-loops]
+8. [*comp1500-custom-functions] [=comp1010-write-simple-functions]
+9. [*comp1500-visual-io] [=comp1500-io] [=comp1010-accept-use-input]
+10. [*comp1500-random-numbers]
+
+### Topics in CS
 
 Part 2
 ------
 
-### Programming
+### Programming in Java
 
 *Missing* learning objectives {-}
 ===========================
