--- a/reconsidered/COMP1500.md
+++ b/reconsidered/COMP1500.md
@@ -162,7 +162,7 @@ By the end of this unit, students should be able to:
 4.  Create a simple, sequential program in a high-level visual programming
     language (e.g., Scratch). :program#visual-language-simple-sequence:
 5.  Create a program that uses variables in a high-level visual programming
-    language. :program#variables:
+    language. :program#variables: :represent:
 6.  Create a program that uses logical expressions in a high-level visual
     programming language. :program#logical-expressions:
 7.  Create a program that uses conditional statements in a high-level visual
