Working on finding unused objectives.

--- a/reconsidered/COMP1000.md
+++ b/reconsidered/COMP1000.md
@@ -4,6 +4,7 @@ author: Franklin Bristow
 date: 2020
 header-includes:
     \usepackage{fullpage}
+    \usepackage{appendix}
 toccolor: blue
 ---
 
@@ -50,8 +51,6 @@ By the end of part 2 of this course, a student should be able to:
 
 Learning objectives {-}
 ===================
-
-\setcounter{section}{1000}
 
 Part 1
 ------
@@ -142,7 +141,11 @@ Part 2
 
 ### Programming in Java
 
-*Missing* learning objectives {-}
-===========================
+Learning objectives not covered in COMP 1000 {#missing-objectives -}
+============================================
 
+`<h1>Appendix</h1>`{=html}
 
+\appendix
+\appendixpage
+\addappheadtotoc
