--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -298,4 +298,4 @@ By the end of this unit, students should be able to:
    :program#write-sorting-alrogithms:
 
 [^searching]: Both linear search and binary search are learning objectives that
-listed in COMP 1010.
+are listed in COMP 1010.
