--- a/blog/May 1, 2020.md
+++ b/blog/May 1, 2020.md
@@ -1,7 +1,7 @@
-Goals for today:
+To do:
 
 * [X] Capture which learning outcomes are *not* included in the new course.
-* [ ] Simplify the `Makefile`, it's pretty messy right now and I think can be
+* [X] Simplify the `Makefile`, it's pretty messy right now and I think can be
       simplified now that I'm pretty much doing all courses the same way.
 * [ ] Get in contact with COMP 2XXX instructors to find out their expectations
       for students coming out of COMP 1020 to ensure that the course I design
@@ -37,3 +37,23 @@ that there are (or are not) items to insert into the `pf.OrderedList`.
 
 That worked, and was less difficult than expected, since I was already building
 the `pf.OrderedList` before inserting it into the document. Nice!
+
+---
+
+Now that I can see the objectives that I'm missing from COMP 1010, I realize
+that I need to elaborate on some of the learning objectives covered in COMP 1500
+related to programming. When I went through the objectives the first time, I was
+collecting them from the textbook without looking too much at the material that
+I covered. The material that I covered in the actual class may not reflect the
+materials. Specifically, I'm thinking about programming with Scratch: in COMP
+1010 we have an objective for students to be able to evaluate arithmetic
+expressions where in COMP 1500 we don't have an explicit objective for that,
+it's bundled into programming with variables.
+
+---
+
+I've simplified as much as I think I can in the `Makefile`. The remaining thing
+that *could* be simplified is that the rules to make `pdf` and `html` differ by
+only one option (outside of the different file suffixes). If I go further into
+this, I'm falling into a rabbit hole that has very little value coming out of
+it. Good enough.
