--- a/reconsidered/COMP1000.md
+++ b/reconsidered/COMP1000.md
@@ -22,7 +22,7 @@ experience.
 Course outcomes {-}
 ===============
 
-Part 1
+Part 1: Computing
 ------
 
 By the end of part 1 of this course, a student should be able to:
@@ -35,7 +35,7 @@ By the end of part 1 of this course, a student should be able to:
 4. Use and evaluate searching algorithms. :algorithms:
 5. Gain a better understanding of computer science as a discipline. :concepts:
 
-Part 2
+Part 2: Programming
 ------
 
 By the end of part 2 of this course, a student should be able to:
@@ -52,7 +52,7 @@ By the end of part 2 of this course, a student should be able to:
 Learning objectives {-}
 ===================
 
-Part 1
+Part 1: Computing
 ------
 
 ### Represent information
@@ -125,7 +125,9 @@ By the end of this unit, students should be able to:
 1. [*comp1500-write-program-given-solution]
 2. [*comp1500-compare-high-level-with-assembly]
 3. [*comp1500-visual-language-simple-sequence] [=comp1010-write-and-run]
+   [=comp1010-write-evaluate-arithmetic-expressions] 
 4. [*comp1500-variables] [=comp1010-declare-use-variables]
+   [=comp1010-use-named-constants]
 5. [*comp1500-logical-expressions]
    [~comp1010-evaluate-boolean-expressions-logical-operators]
 6. [*comp1500-conditional-statements] [=comp1010-use-conditional-statements]
@@ -136,7 +138,7 @@ By the end of this unit, students should be able to:
 
 ### Topics in CS
 
-Part 2
+Part 2: Programming
 ------
 
 ### Programming in Java
