Added learning objectives for review unit in 1020.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -4,6 +4,8 @@ author: Franklin Bristow
 date: 2020
 header-includes:
     \usepackage{fullpage}
+    \usepackage{tocstyle}
+    \settocstylefeature{spaceafternumber}{0.5em}
 toccolor: blue
 ---
 
@@ -43,6 +45,8 @@ By the end of this course, a student should be able to:
 Learning objectives {-}
 ===================
 
+\setcounter{section}{1020}
+
 Course introduction, real Java
 ------------------------------
 
@@ -52,7 +56,128 @@ By the end of this unit, students should be able to:
    skills learned in previous courses (Python or Processing).
    :program#first-year-review: [^intro-length]
    
-[^intro-length]: In the current curriculum, this unit is 2 weeks long.
+[^intro-length]: In the current curriculum, this unit is 2 weeks long. I
+*suspect* that the comprehensive introductory review was added to accommodate
+students entering COMP 1020 from COMP 1012, where the students will have only
+seen Python.
+  
+### Write and run programs
+
+By the end of this unit, students should be able to:
+
+1. Choose and use a text editor/IDE to write Java programs. :program:
+2. Download, install, and configure the JDK. :program:
+3. Compile and run a Java program from within an IDE (DrJava is noted
+   specifically). :program:
+4. Compile and run a Java program from the command-line on a remote machine
+   (`aviary.cs.umanitoba.ca` is noted specifically). :program:
+5. Write, compile, and run a basic Java program with a `main` method. :program:
+
+### Create and use variables in a program
+
+By the end of this unit, students should be able to:
+
+1. Observe and follow course-specific naming conventions when naming classes,
+   methods, and variables. :program:
+2. Use `String` values and variables in a program. :program:
+3. Use primitive type values and variables in a program. :program:
+4. Use the `+` operator in different contexts (e.g., primitive types,
+   concatenation with `String`). :program:
+5. Predict the type of the result of an expression using different primitive
+   type values (e.g., `int` + `double` &rarr; `double`). :evaluate:
+6. Use a variety of other arithmetic operators in expressions. (&plus;, &minus;,
+   &times;, &divide;, mod). :program:
+7. Declare, assign, and use variables in a Java program. :program:
+8. Choose meaningful but concise names for variables. :communicate:
+9. Use comments to provide additional context for code. :communicate:
+10. Write an assignment statement (i.e., `int x = ...;`) where the type of the
+    variable on the left side is compatible with the result of the expression on
+    the right. :program:
+    
+### Create and use methods in a program
+
+By the end of this unit, students should be able to:
+
+1. Name the parts of a method definition (e.g., signature, body, modifiers,
+   return type, name, parameters). :communicate:
+2. Write and call methods in a Java program. :program:
+3. Declare and use file-scoped (`static`) variables in a Java program. :program:
+4. Declare and use named constants in a Java program. :program:
+
+### Get and use input in a program
+
+By the end of this unit, students should be able to:
+
+1. Use the `Scanner` class to get input on standard input. :program:
+    1. Get tokenized input with specific types (e.g., `nextInt()`, `nextLong()`,
+       `nextDouble()`, etc)
+    2. Get line-based input with `nextLine()`.
+
+### Convert between types
+
+By the end of this unit, students should be able to:
+
+1. Convert from `String` to primitive types using the `TYPE.parseTYPE()` family
+   of methods. :program:
+2. Convert from primitive types to `String` using the `TYPE.toString()` family
+   of methods. :program:
+3. Convert between primitive types with implicit upcasting and explicit
+   downcasting. :program:
+
+### Write code concisely
+
+By the end of this unit, students should be able to:
+
+1. Increment and decrement number-type variables with the `++` and `--`
+   operators, both prefix and postfix. :program:
+2. Increment and decrement number-type variables with the `+=`, `-=`, `*=`, and
+   `\=` operators. :program:
+3. Write and use Boolean expressions with logical and relational operators.
+   :program:
+4. Test `String`s for equality using the `.equals` method. :program:
+5. Write concise Boolean expressions (i.e., prefer to use `value` instead of
+   `value == true` and `!value` instead of `value != true`). :program:
+    
+### Write and use control structures in a program
+
+By the end of this unit, students should be able to:
+
+1. Write and use conditional statements. :program:
+2. Write and use loop structures (`for`, `while`, and `do`/`while`). :program:
+3. Use `break` and `continue` in a loop structure. :program:
+
+### Create and use `String` values in a program
+
+By the end of this unit, students should be able to:
+
+1. Use the escape character `\` to place special characters in `String` literals
+   (e.g., `"`, `\n`, `\t`). :program:
+2. Use `String` methods on an instance of a `String` (e.g., `equals`,
+   `equalsIgnoreCase`, `length`, `charAt`). :program:
+    
+### Use a language library
+
+By the end of this unit, students should be able to:
+
+1. Use methods and constants from the `Math` library (e.g., `pow`, `min`, `max`,
+   `PI`, `random`). :program:
+
+### Create and use arrays in a program
+
+By the end of this unit, students should be able to:
+
+1. Create and use arrays in a program. :program:
+2. List the default values in an array for different types (e.g., `int` &rarr;
+   `0`, `String` &rarr; `null`). :communicate:
+3. Get the number of elements in an array with the `.length` property. :program:
+4. Loop over all of the elements in an array with a `for` loop. :program:
+5. Use utility methods from the `Arrays` class (e.g., `Arrays.toString`).
+   :program:
+6. Copy the contents of an array to a new array. :program:
+7. Explain why simple assignment does not copy the contents of an array.
+   :communicate:
+8. Use a "for each"-style loop in Java (i.e., `for (int elem : data)`).
+   :program:
 
 OOP Basics 1
 ------------
