Use tcolorbox for *all* LaTeX boxes.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -43,17 +43,12 @@ Learning objectives {-}
 Course introduction, real Java
 ------------------------------
 
-By the end of this unit, students should be able to:
+By the end of these units, students should be able to:
 
 1. Write and run a program in a *new* programming language (Java), transferring
    skills learned in previous courses (Python or Processing).
-   :program#first-year-review: [^intro-length]
+   :program#first-year-review: 
    
-[^intro-length]: In the current curriculum, this unit is 2 weeks long. I
-*suspect* that the comprehensive introductory review was added to accommodate
-students entering COMP 1020 from COMP 1012, where the students will have only
-seen Python.
-  
 ### Write and run programs
 
 By the end of this unit, students should be able to:
@@ -70,7 +65,7 @@ By the end of this unit, students should be able to:
 
 By the end of this unit, students should be able to:
 
-1. Observe and follow course-specific naming conventions when naming classes,
+1. Observe and apply course-specific naming conventions when naming classes,
    methods, and variables. :program:
 2. Use `String` values and variables in a program. :program:
 3. Use primitive type values and variables in a program. :program:
@@ -84,8 +79,8 @@ By the end of this unit, students should be able to:
 8. Choose meaningful but concise names for variables. :communicate:
 9. Use comments to provide additional context for code. :communicate:
 10. Write an assignment statement (i.e., `int x = ...;`) where the type of the
-    variable on the left side is compatible with the result of the expression on
-    the right. :program:
+    variable on the left side is *compatible with* the result of the expression
+    on the right. :program:
     
 ### Create and use methods in a program
 
@@ -111,9 +106,9 @@ By the end of this unit, students should be able to:
 By the end of this unit, students should be able to:
 
 1. Convert from `String` to primitive types using the `TYPE.parseTYPE()` family
-   of methods. :program:
+   of methods (e.g., `Integer.parseInt()`) :program:
 2. Convert from primitive types to `String` using the `TYPE.toString()` family
-   of methods. :program:
+   of methods (e.g., `Integer.toString()`). :program:
 3. Convert between primitive types with implicit upcasting and explicit
    downcasting. :program:
 
@@ -179,7 +174,7 @@ By the end of this unit, students should be able to:
 
 1. Define the term "Object-oriented programming". :oo:
    :communicate#explain-basic-oo-concepts:
-    1. List the properties of a class.
+    1. List the properties of a class (e.g., methods, data).
     2. Explain what the `this` keyword represents in an instance method of a
        class.
     3. Define the term "encapsulation".
@@ -238,7 +233,7 @@ By the end of this unit, students should be able to:
 1. Declare, initialize, and use multi-dimensional arrays in a Java program.
    :data-structures: :program#create-and-use-multidimensional-arrays:
     1. Declare, initialize, and use "ragged" arrays in a Java program (i.e.,
-       multi-dimensional arrays with non-uniform length in the 2^nd^+
+       multi-dimensional arrays with non-uniform length in the 2^nd^
        dimension).
     2. Write a class that has a multi-dimensional array as an instance variable.
 2. Given a piece of code, draw a diagram representing the state of references in
