Move the objective barcode to where the objectives are.

--- a/reconsidered/COMP1020.md
+++ b/reconsidered/COMP1020.md
@@ -410,5 +410,5 @@ By the end of this unit, students should be able to:
    selection sort, recursive merge sort, quick sort).  :algorithms:
    :program#write-sorting-alrogithms:
 
-[^searching]: Both linear search and binary search are learning objectives that
-are listed in COMP 1010.
+[^searching]: Both linear search and binary search are COMP 1010 learning
+objectives.
