Record of sent e-mails.

--- a/blog/May 6, 2020.md
+++ b/blog/May 6, 2020.md
@@ -1,13 +1,13 @@
 To do:
 
-* [ ] Get in contact with COMP 2XXX instructors to find out their expectations
+* [o] Get in contact with COMP 2XXX instructors to find out their expectations
       for students coming out of COMP 1020 to ensure that the course I design
       meets those expectations.
-    * [ ] COMP 2140
-    * [ ] COMP 2160
-    * [ ] COMP 2150
+    * [X] COMP 2140
+    * [X] ~~COMP 2160~~
+    * [X] COMP 2150
     * [ ] COMP 2280
-    * [ ] COMP 2080         
+    * [ ] COMP 2080
 
 ---
 
@@ -18,3 +18,14 @@ I'm much happier with the way it looks.
 
 I'm going to do a final review of the objectives for 1020, then send e-mails to
 2nd year instructors.
+
+---
+
+I've spent some time making the document *look* pretty, without significant
+change to the content, so I need to actually send the document out.
+
+I sent an e-mail to COMP 2140. *I am* COMP 2160 (for now, anyway), so I'm not
+sending an e-mail to that instructor.
+
+I've also sent to COMP 2150. I think I'll stick to this for today, and see what
+feedback I get from those people.
